Update Feuture Names in Linear Regression Model Pipepline

--- a/Source_Code/Liner Model/Zindi_MalawiFloodPrediction_LinearModel.ipynb
+++ b/Source_Code/Liner Model/Zindi_MalawiFloodPrediction_LinearModel.ipynb
@@ -59,7 +59,7 @@
     "    if i[0:6]=='precip':\n",
     "        #print(type(i[7:11]))\n",
     "        if i[7:11] == '2014'or i[7:11] =='2015':\n",
-    "            source_df_2015['Week'+str(x)+' 2014/5'] = source_df[str(i)]\n",
+    "            source_df_2015['Week'+str(x)] = source_df[str(i)]\n",
     "            #source_df.drop(i,axis=1,inplace=True)\n",
     "            x= x+1\n",
     "x=1\n",
@@ -67,7 +67,7 @@
     "    if i[0:6]=='precip':\n",
     "        #print(type(i[7:11]))\n",
     "        if i[7:11] == '2019':\n",
-    "            source_df_2019['Week'+str(x)+' 2019'] = source_df[str(i)]\n",
+    "            source_df_2019['Week'+str(x)] = source_df[str(i)]\n",
     "            #source_df.drop(i,axis=1,inplace=True)\n",
     "            x= x+1\n",
     "\n"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
