--- a/Source_Code/XGBoost/Zindi_MalawiFloodPrediction_XGBoost.ipynb
+++ b/Source_Code/XGBoost/Zindi_MalawiFloodPrediction_XGBoost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "#from sklearn.linear_model import LinearRegression\n",
     "import xgboost as xgb\n",
     "from sklearn import preprocessing\n",
-    "from sklearn import utils"
+    "from sklearn import utils\n",
+    "import time as t"
    ]
   },
   {
@@ -109,33 +110,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.05146445, 0.05146445, 0.05146445, ..., 0.0990817 , 0.0990817 ,\n",
-       "       0.0990817 ], dtype=float32)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dpredict = xgb.DMatrix(source_df_2019)\n",
-    "xgb_model.predict(dpredict)"
+    "source_df_2019['target_2019'] = xgb_model.predict(dpredict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#source_df_2019['target_2019'].to_csv(r'linnear_prediction.csv',header=True)"
+    "Hour = t.localtime().tm_hour\n",
+    "Minute = t.localtime().tm_min\n",
+    "source_df_2019['target_2019'].to_csv(f'{Hour}H{Minute}XGBoost_prediction.csv',header=True)"
    ]
   }
  ],
