XGboost Configured to place me at 49th

--- a/Source_Code/XGBoost/Zindi_MalawiFloodPrediction_XGBoost.ipynb
+++ b/Source_Code/XGBoost/Zindi_MalawiFloodPrediction_XGBoost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,14 +103,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param = {'max_depth':2, 'eta':1, 'objective':'binary:logistic' }\n",
-    "num_round = 2\n",
+    "# Max Depth = 3 best so far. Tried 6, 2\n",
+    "param = {'max_depth':3, 'eta':1, 'objective':'binary:logistic' }\n",
+    "# 4 Boosting Rounds Worked Best, tried: 2,3,5,120,60\n",
+    "num_round = 4\n",
     "xgb_model = xgb.train(param, dtrain, num_round)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,13 +122,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "time.struct_time(tm_year=2020, tm_mon=4, tm_mday=1, tm_hour=18, tm_min=55, tm_sec=1, tm_wday=2, tm_yday=92, tm_isdst=0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.localtime()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "Hour = t.localtime().tm_hour\n",
     "Minute = t.localtime().tm_min\n",
-    "source_df_2019['target_2019'].to_csv(f'{Hour}H{Minute}XGBoost_prediction.csv',header=True)"
+    "Year = t.localtime().tm_year\n",
+    "Month = '0'+str(t.localtime().tm_mon)\n",
+    "Day = '0'+str(t.localtime().tm_mday)\n",
+    "source_df_2019['target_2019'].to_csv(f'{Year}{Month}{Day} {Hour}H{Minute} XGBoost_prediction.csv',header=True)"
    ]
   }
  ],
